// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar match snapshot initial state 1`] = `
<DocumentFragment>
  <div
    class="avatar-component"
  >
    <div
      class="avatar-alt"
      data-testid="alt"
    >
      MN
    </div>
    <img
      alt="Mohsen Najaflou"
      class="avatar-image hidden"
      data-testid="image"
      src="some/src"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar matches snapshot when image is loaded 1`] = `
<DocumentFragment>
  <div
    class="avatar-component"
  >
    <div
      class="avatar-alt hidden"
      data-testid="alt"
    >
      MN
    </div>
    <img
      alt="Mohsen Najaflou"
      class="avatar-image"
      data-testid="image"
      src="some/src"
    />
  </div>
</DocumentFragment>
`;
